/* 
    Source: https://github.com/rodaine/grpc-chat/blob/master/protos/chat.proto
    Modified by: Jay Shrivastava https://github.com/jayshrivastava
*/

syntax = "proto3";
package groupchat;

import "google/protobuf/timestamp.proto";

service Chat {
 rpc Login(LoginRequest) returns (LoginResponse) {}
 rpc Logout(LogoutRequest) returns (LogoutResponse) {}
 rpc Stream(stream StreamRequest) returns (stream StreamResponse) {}
}

message LoginRequest {
    string Password = 1;
    string Username = 2;
    string Group = 3; 
}

message LoginResponse {
    string Token = 1;
}

message LogoutRequest {
    string Username = 1;
}

message LogoutResponse {}

message StreamResponse {
    google.protobuf.Timestamp Timestamp = 1;

    oneof Event {
        Login ClientLogin = 2;
        Logout ClientLogout = 3;
        Message ClientMessage = 4;
        Existing ClientExisting = 5; 
    }
    message Existing {
        string Username = 2;
        string Group = 3;
    }

    message Login {
        string Username = 2;
        string Group = 3;
    }
    message Logout {
        string Username = 2;
        string Group = 3;
    }
    message Message {
        string Username = 2;
        string Message = 3;
        string Group = 4;
    }
}

message StreamRequest {
    string Username = 2;
    string Message = 3;
    string Group = 4;
}